--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -337,7 +337,7 @@ jobs:
       - name: Add annotations
         # Don't run on forked pull requests
         if: ${{ failure() && github.event.pull_request.head.repo.full_name == github.repository }}
-        uses: pytorch/add-annotations-github-action@main
+        uses: pytorch/add-annotations-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -430,7 +430,7 @@ jobs:
       - name: Add annotations
         # Don't run on forked pull requests
         if: ${{ failure() && github.event.pull_request.head.repo.full_name == github.repository }}
-        uses: pytorch/add-annotations-github-action@main
+        uses: pytorch/add-annotations-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
