--- a/.github/workflows/generated-win-vs2019-cuda11.5-py3.yml
+++ b/.github/workflows/generated-win-vs2019-cuda11.5-py3.yml
@@ -1,21 +1,23 @@
 # @generated DO NOT EDIT MANUALLY
 # Template is at:    .github/templates/windows_ci_workflow.yml.j2
 # Generation script: .github/scripts/generate_ci_workflows.py
-name: periodic-win-vs2019-cuda11.5-py3
+name: win-vs2019-cuda11.5-py3
 
 on:
+  pull_request:
   push:
     tags:
       - 'ciflow/all/*'
       - 'ciflow/cuda/*'
-      - 'ciflow/scheduled/*'
+      - 'ciflow/trunk/*'
       - 'ciflow/win/*'
-  schedule:
-    - cron: 45 4,10,16,22 * * *
+    branches:
+      - master
+      - release/*
   workflow_dispatch:
 
 env:
-  BUILD_ENVIRONMENT: periodic-win-vs2019-cuda11.5-py3
+  BUILD_ENVIRONMENT: win-vs2019-cuda11.5-py3
   BUILD_WHEEL: 1
   MAX_JOBS: 8
   CUDA_VERSION: "11.5"
@@ -39,7 +41,7 @@ env:
   USE_CUDA: 1
 
 concurrency:
-  group: periodic-win-vs2019-cuda11.5-py3-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}
+  group: win-vs2019-cuda11.5-py3-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}
   cancel-in-progress: true
 
 jobs:
@@ -47,7 +49,7 @@ jobs:
     runs-on: "windows.4xlarge"
     timeout-minutes: 240
     env:
-      JOB_BASE_NAME: periodic-win-vs2019-cuda11.5-py3-build
+      JOB_BASE_NAME: win-vs2019-cuda11.5-py3-build
       http_proxy: "http://internal-tf-lb-20210727220640487900000002-835786077.us-east-1.elb.amazonaws.com:3128"
       https_proxy: "http://internal-tf-lb-20210727220640487900000002-835786077.us-east-1.elb.amazonaws.com:3128"
     steps:
@@ -139,11 +141,11 @@ jobs:
     env:
       TEST_RUNNER_TYPE: windows.8xlarge.nvidia.gpu
       NUM_TEST_SHARDS: 2
-      NUM_TEST_SHARDS_ON_PULL_REQUEST: 2
+      NUM_TEST_SHARDS_ON_PULL_REQUEST: 0
       PR_BODY: ${{ github.event.pull_request.body }}
       NOGPU_RUNNER_TYPE: windows.4xlarge
       ENABLE_FORCE_ON_CPU_TEST: 1
-      RUN_SMOKE_TESTS_ONLY_ON_PR: False
+      RUN_SMOKE_TESTS_ONLY_ON_PR: True
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
       render-matrix: ${{ steps.set-matrix.outputs.render-matrix }}
@@ -162,7 +164,7 @@ jobs:
   test:
     timeout-minutes: 240
     env:
-      JOB_BASE_NAME: periodic-win-vs2019-cuda11.5-py3-test
+      JOB_BASE_NAME: win-vs2019-cuda11.5-py3-test
       SHARD_NUMBER: ${{ matrix.shard }}
       NUM_TEST_SHARDS: ${{ matrix.num_shards }}
       TEST_CONFIG: ${{ matrix.config }}
@@ -305,7 +307,7 @@ jobs:
         env:
           AWS_DEFAULT_REGION: us-east-1
           BRANCH: ${{ steps.parse-ref.outputs.branch }}
-          JOB_BASE_NAME: periodic-win-vs2019-cuda11.5-py3-test
+          JOB_BASE_NAME: win-vs2019-cuda11.5-py3-test
           PR_NUMBER: ${{ github.event.pull_request.number }}
           SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
           TAG: ${{ steps.parse-ref.outputs.tag }}
